--- a/Logins/app/src/main/res/values/strings.xml
+++ b/Logins/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
 
     <string name="facebook_app_id">183885785720758</string>
     <string name="fb_login_protocol_scheme">fb183885785720758</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
